2005-09-01 Magnus Hagdorn
 * glide_types.f90: new variable for basal water depth in velo grid
 * glide_velo.f90: rename calcbtrc to calc_btrc and make it public, use
   stagbwat; change API of slipvelo, btrc is now calculated after temps
   have been calculated
 * glide.f90: slipvelo API changed, calculate basal traction param after
   temp calculations
 * glide_temp.f90: also transform basal water depth to velo grid
 * glide_thck.f90: slipvelo API changed

2005-08-11 Magnus Hagdorn
 * eis_ela.f90: ablation over ice shelves wasn't scaled properly

2005-07-14 Magnus Hagdorn
 * glimmer_pdd.f90: moved romberg integration to separate module
 * glimmer_integrate.f90: new module for numerical integration
 * test_integrate.f90: test program for numerical integration
 * Makefile.am: hooked up new files
 * glimmer_ts.f90: require time series to be monotonic

2005-07-13 Magnus Hagdorn
 * glimmer_ts.f90: fixed bug where the BC of linear interpolator
   were not correctly implemented

2005-07-04 Magnus Hagdorn
 * expanded basal boundary section in numerics doc

2005-07-01 Magnus Hagdorn
 * added new figure illustrating basal BC
 * make_doc.rules: fixed bug with eps generation from fig

2005-07-01 Magnus Hagdorn
 * merged in HEAD

2005-06-24 Magnus Hagdorn
 * glide.f90: enable basal shear stress calculations
 * glide_vars.def: change unit of basal shear stress to kilopascal
 * glimmer_coordinates.f90: add function to calculate lower-left 
   node

2005-06-13 Magnus Hagdorn
 * profile.f90: new function to register new time stamps
 * glide_types.f90: make profile period a run-time parameter, add
   profile type
 * glide_setup.f90: move profile routines to glide_profile.f90, 
   load profile period from config file
 * glide_profile.f90: new module for profiling
 * Makefile.am: add glide_profile.f90 to built system
 * glide.f90: use new profiling mechanism

2005-06-08 Magnus Hagdorn
 * glide_thk.f90: fixed bug #132

2005-06-06 Magnus Hagdorn